# fraud-detection-streaming

./: .gitignore  Dockerfile  PROJECT_STRUCTURE.md  README.md  docker-compose.yml  fraud_model.json  init_feast.py  main.py  prediction_service.py  pyproject.toml  requirements.txt  train_model.py
debug/: debug_check_connection.py  debug_diagnose_feast.py  debug_push.py  debug_read.py
feature_repo/: feature_store_docker.yaml  feature_store_local.yaml  features.py
models/: __init__.py  fraud_model.json  train_model.py
scripts/: __init__.py  init_db.py  init_feast.py
services/: __init__.py  prediction_service.py  producer.py  stream_processor.py
