[project]
name = "fraud-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "confluent-kafka>=2.13.0",
    "faker>=40.1.2",
    "fastapi>=0.128.0",
    "feast[postgres,redis]>=0.59.0",
    "kafka-python>=2.3.0",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.34.0",
    "xgboost>=3.1.3",
]
